<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/category_parent_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/category_0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorCategory"
            android:text="@string/category_apartment"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/category_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorCategoryBright"
            android:text="@string/category_barber"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/category_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorCategory"
            android:text="@string/category_car"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/category_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorCategoryBright"
            android:text="@string/category_cinema"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/category_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorCategory"
            android:text="@string/category_clothes"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/category_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorCategoryBright"
            android:text="@string/category_club"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/category_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorCategory"
            android:text="@string/category_concert"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/category_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorCategoryBright"
            android:text="@string/category_cosmetics"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/category_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorCategory"
            android:text="@string/category_electronics"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/category_9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorCategoryBright"
            android:text="@string/category_excursion"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/category_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorCategory"
            android:text="@string/category_food"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/category_11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorCategoryBright"
            android:text="@string/category_fuel"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/category_12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorCategory"
            android:text="@string/category_furniture"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/category_13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorCategoryBright"
            android:text="@string/category_games"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/category_14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorCategory"
            android:text="@string/category_hygiene"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/category_15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorCategoryBright"
            android:text="@string/category_job"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/category_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorCategory"
            android:text="@string/category_kids"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/category_17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorCategoryBright"
            android:text="@string/category_medicine"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/category_18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorCategory"
            android:text="@string/category_other"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/category_19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorCategoryBright"
            android:text="@string/category_payment"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/category_20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorCategory"
            android:text="@string/category_phone"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/category_21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorCategoryBright"
            android:text="@string/category_pub"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/category_22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorCategory"
            android:text="@string/category_rent"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/category_23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorCategoryBright"
            android:text="@string/category_repairs"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/category_24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorCategory"
            android:text="@string/category_vacation"
            android:textAlignment="center"
            android:textSize="24sp" />
    </LinearLayout>
</ScrollView>
